[gd_scene load_steps=9 format=3 uid="uid://2kxxsudhcxst"]

[ext_resource type="Texture2D" uid="uid://wgwfsteag045" path="res://Assets/factory_sprite.png" id="1_iaaop"]
[ext_resource type="Script" path="res://Scripts/entities/building.gd" id="1_r8p3j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mp204"]
atlas = ExtResource("1_iaaop")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg5xb"]
atlas = ExtResource("1_iaaop")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wc72b"]
resource_name = "factory"
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mp204")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg5xb")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3wvf2"]
size = Vector2(27, 29)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y0b3f"]
bg_color = Color(0.454902, 0, 0, 0.65098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u5yfp"]
bg_color = Color(0, 0.705882, 0, 1)

[node name="Factory" type="Area2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_r8p3j")
metadata/maxHealth = 100
metadata/health = 100

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wc72b")
autoplay = "default"
frame_progress = 0.224041

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_3wvf2")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -12.0
offset_top = 9.0
offset_right = 13.0
offset_bottom = 13.0
theme_override_styles/background = SubResource("StyleBoxFlat_y0b3f")
theme_override_styles/fill = SubResource("StyleBoxFlat_u5yfp")
step = 1.0
show_percentage = false

[node name="Timer" type="Timer" parent="." groups=["building"]]
wait_time = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
